xboxdrv 0.4.7 - (29/Jul/2009)
=============================

* support for Pelican TSZ360 pad
* support for Saitek P3200 pad
* support for Thrustmaster Firestorm Dual Power (044f:b312)
* deadzone support for trigger via --deadzone-trigger NUM
* some documentation improvements


xboxdrv 0.4.6 - (21/Feb/2009)
=============================

* --calibration AXIS=MIN,CENTER,MAX option to workaround broken controller
* xboxdrv-daemon.py to launch xboxdrv automatically when device gets
  plugged in


xboxdrv 0.4.5 - (15/Feb/2009)
=============================

* fixed mixup between strong and weak rumble
* added Harmonix Drum Kit for Xbox 360 support
* added Logitech Chillstream support
* added evsend tool to send events to /dev/input/eventX
* Y-Axis for Firestorm gamepad fixed


xboxdrv 0.4.4 - (24/Jan/2009)
=============================

* auto-detect USB endpoints
* rumble support, enabled via --force-feedback
* added --rumble-gain to control rumble strength
* --deadzone accepts values in percentage
* DDR Universe 2 Mat added


xboxdrv 0.4.3 - (17/Jan/2009)
=============================

* added support for X11 keysym in --ui-buttonmap
* added --ui-clear and 'void' mappings to unmap buttons and axis
* fixed LED handling for wireless gamepads
* Thrustmaster Firestorm Dual Power support (044f:b304)
* added --name option to set device name
* added JS_${NUM} name to address joystick buttons by number instead
  of name
* fixed issue with multiple wireless controller
* some preparation for rumble (prints FF events)


xboxdrv 0.4.2 - (11/Jan/2009)
=============================

* fixed --dpad-only


xboxdrv 0.4.1 - (08/Jan/2009)
=============================

* workaround for KEY_MEDIA_REPEAT


xboxdrv 0.4 - (07/Jan/2009)
===========================

* added --square-axis option
* added --autofire option
* added --relative-axis option (i.e. emulate joystick throttle)
* added --ui-buttonmap and --ui-axismap to change uinput events
* support for keyboard events